[package]
name = "ocipack"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["gzip", "blocking", "json", "deflate", "socks", "rustls-tls"], default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.11.2"
bytes = "1.5"
sha2 = "0.10"
hex-literal = "0.4"
hex = "0.4"
regex = "1.10"
tar = "0.4"
flate2 = "1.0"
rand = "0.8"
url = "2.5"
home = "0.5"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }
dockerfile-parser = "0.9.0-alpha.1"
derive_builder = "0.12.0"
zstd = "0.13"
fantasy-util = "0.1.8"
ubyte = "0.10"
colored = "2"
tempfile = "3"
