[package]
name = "ocipack"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["gzip", "json", "deflate", "socks", "rustls-tls", "stream", "multipart"], default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
log = "0.4"
env_logger = "0.11.3"
bytes = "1.6"
sha2 = "0.10"
hex-literal = "0.4"
hex = "0.4"
regex = "1.10"
tar = "0.4"
flate2 = "1.0"
rand = "0.8"
url = "2.5"
home = "0.5"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dockerfile-parser = "0.9.0-alpha.1"
derive_builder = "0.20"
zstd = "0.13"
fantasy-util = "0.1.8"
ubyte = "0.10"
colored = "2"
tempfile = "3"
tokio = { version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"